# enthub

./: .gitignore  AGENTS.md  CONTEXT.md  PRD.md  README.md
.github/: ci.yml.tmp
.github/workflows/: ci.yml
config/grafana/: dashboards.yaml  datasources.yaml
config/loki/: local-config.yaml
config/prometheus/: alertmanager.yml  prometheus.yml
config/promtail/: promtail.yaml
config/qdrant/: production.yaml
config/tempo/: tempo.yaml
deploy/docker/: .env.example  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  embed.Dockerfile  embed_server.py  entrypoint.sh  parse.Dockerfile  parse_entrypoint.sh  parse_server.py  rerank-entrypoint.sh  rerank.Dockerfile  rerank_entrypoint.sh  rerank_server.py
deploy/docker/scripts/: init-multiple-dbs.sh
deploy/k8s/base/: ingress.yaml  keycloak-deployment.yaml  keycloak-service.yaml  kustomization.yaml  langfuse-deployment.yaml  langfuse-service.yaml  monitoring-grafana.yaml  monitoring-loki-config.yaml  monitoring-loki-deployment.yaml  monitoring-loki-service.yaml  monitoring-loki.yaml  monitoring-prometheus.yaml  monitoring-stack.yaml  monitoring-tempo-config.yaml  monitoring-tempo-deployment.yaml  monitoring-tempo-service.yaml  monitoring-tempo.yaml  namespace.yaml  network-policies.yaml  qdrant-service.yaml  qdrant-statefulset.yaml  rag-deployment.yaml  rag-service.yaml  vllm-deployment.yaml
docs/: deployment-guide.md  workflow.md
docs/adr/: ADR-0001-stack-choice.md  ADR-0002-retrieval-strategy.md  ADR-0003-llm-serving-path.md
docs/archive/2026-06-25-nvidia-rag-legacy/: architecture.md  cost-optimization.md  model-selection.md  security-hardening.md  tenant-onboarding.md  troubleshooting.md
docs/eval/: golden_set.jsonl
docs/references/: anythingllm_hotdir.md  nvidia_agentic_rag.md  onyx_connectors.md  surfsense_schema.md
scripts/: backup.sh  benchmark.py  eval.py  provision-tenant.sh  restore.sh  run_eval.py  update-models.sh
src/auth/keycloak-config/: realm-export.json
src/guardrails/: Dockerfile  server.py
src/ingestion/: pipeline.py
src/rag-api/: Dockerfile  main.py  pyproject.toml
src/rag-api/agent/: graph.py  nodes.py  state.py  tools.py
src/rag-api/api/: dependencies.py  routes.py  schemas.py
src/rag-api/core/: config.py  tenants.py
src/rag-api/services/: __init__.py
(+18 files in other folders)
