[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-agentic-rag"
version = "1.0.0"
description = "Multi-tenant Agentic RAG with Guardrails, RBAC, and Observability"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Enterprise RAG Team", email = "team@company.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.0",
    "pydantic-settings==2.3.0",
    "langgraph==0.2.0",
    "langchain-core==0.3.0",
    "langchain-text-splitters==0.2.0",
    "httpx==0.27.0",
    "asyncpg==0.29.0",
    "sqlalchemy==2.0.30",
    "redis==5.0.0",
    "pyjwt==2.8.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "prometheus-client==0.19.0",
    "langfuse==2.10.0",
    "python-multipart==0.0.9",
    "email-validator==2.1.0",
    "pyyaml==6.0.1",
    "python-dotenv==1.0.1",
    "numpy==1.26.4",
    "pandas==2.2.0",
    "anyio==4.4.0",
    "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.4.0",
    "mypy==1.10.0",
    "pre-commit==3.7.0",
]
gpu = [
    "torch==2.3.0",
    "transformers==4.42.0",
]
cpu = [
    "llama-cpp-python==0.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "UP", "B", "C4", "ANN", "T20"]
ignore = ["ANN101", "ANN102", "ANN103", "T201", "T203"]
exclude = ["migrations", ".venv", "dist", "build"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]